# uml_planterator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TEST_RESULTS.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  jdtls-system-tests.yml
scripts/: setup_jdtls.sh
src/: generate_puml.py
src/uml_planterator/: __init__.py  complexity.py  generator.py  io.py  models.py  parsers.py  registry.py  renderers.py  utils.py
tests/: conftest.py
tests/functional/: test_cli_flags.py  test_complexity_thresholds.py  test_io_error_paths.py
tests/integration/: test_adapter_parse_failure.py  test_complexity_subdiagram.py  test_generator_write.py  test_registry_discovery.py
tests/system/: test_java_jdtls_integration.py
tests/unit/: test_adapter_contract.py  test_adapters.py  test_adapters_base.py  test_adapters_c.py  test_adapters_cpp.py  test_complexity.py  test_complexity_utils_parsers.py  test_diagram_matrix.py  test_diagrams_per_language.py  test_generate_puml_cli.py  test_generate_puml_main.py  test_generator.py  test_generator_inmemory_writer.py  test_import_time_branches.py  test_io.py  test_java_adapter_regex.py  test_java_adapters_advanced.py  test_java_javalang_adapter.py  test_java_javalang_edgecases.py  test_java_jdt_adapter_extra.py  test_java_jdt_adapter_fallback.py  test_javalang_coverage_extra.py  test_javalang_edge_branches.py  test_javalang_finalize.py  test_javalang_more_branches.py  test_javalang_remaining_branches.py  test_javalang_shapes.py  test_jdtls_client_edge_cases.py  test_jdtls_client_more_edge_cases.py  test_jdtls_send.py  (+16 more)
(+19 files in other folders)
