[tool.poetry]
name = "uml_planterator"
version = "0.0.0"
description = "Standards-first UML PlantUML generator for Python codebases."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [{include = "uml_planterator", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
coverage = "^7.0"
black = "^24.0"
ruff = "^0.12"
mypy = "^1.10"
pre-commit = "^4.0"
poetry = "^1.8"

[tool.poetry.scripts]
generate-puml = "generate_puml:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["system: mark tests as system-level that require external services"]

[tool.coverage.run]
source = ["src"]
omit = ["*/.venv/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
